--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@
 # This file records the packages and requirements needed in order for
 # the analysis scripts for NCI_NDR to work correctly.
 # 
-# Assuming Python 2.7
+# Assuming Python 3.6
 
-GDAL>=2.0,<3.0
+GDAL==2.4.1
 Shapely>=1.6.4
 numpy>=1.11.0,!=1.16.0
-pygeoprocessing>=1.7.0,<1.8.0
+pygeoprocessing==1.8.0
 taskgraph[niced_processes]>=0.8.2
